# server

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  livekit.dev.yaml
docs/bruno/Lokal.Alacahoyuk/: bruno.json
migrations/2025-12-23-170926-0000_initial_setup/: down.sql  up.sql
migrations/2026-03-22-225411-0000_add_last_read_to_channel_members/: down.sql  up.sql
migrations/2026-03-25-202318-0000_add_last_event_cursor_to_servers/: down.sql  up.sql
migrations/2026-03-26-221614-0000_add_cert_version_to_servers/: down.sql  up.sql
migrations/2026-03-31-233403-0000_add_identity_to_users/: down.sql  up.sql
migrations/2026-04-14-231601-0000_add_channel_role_to_channel_members/: down.sql  up.sql
migrations/2026-04-15-000000-0000_fix_notifications_foreign_key/: down.sql  up.sql
src/: core.rs  lib.rs  main.rs  schema.rs  utils.rs
src/core/: channel_members.rs  channels.rs  internal.rs  messages.rs  meta.rs  models.rs  orbit.rs  permissions.rs  roles.rs  satellite.rs  servers.rs  types.rs  users.rs  voice.rs
src/core/channel_members/: dto.rs  handlers.rs  service.rs
src/core/channels/: dto.rs  handlers.rs  service.rs
src/core/internal/: handlers.rs
src/core/messages/: dto.rs  handlers.rs  service.rs  ws.rs
src/core/meta/: handlers.rs
src/core/models/: enums.rs  metadata.rs  tables.rs
src/core/roles/: dto.rs  handlers.rs  service.rs
src/core/satellite/: types.rs
src/core/servers/: dto.rs  handlers.rs  service.rs
src/core/users/: dto.rs  handlers.rs  service.rs
src/core/voice/: handlers.rs  service.rs
src/utils/: auth.rs  db.rs  helpers.rs  jwks.rs  jwt_verify.rs  rate_limit.rs  response.rs  service_auth.rs  startup.rs  validation.rs
tests/: auth.rs  channel_members.rs  channels.rs  health.rs  maintenance.rs  messages.rs  meta.rs  rate_limit.rs  roles.rs  websocket.rs
tests/common/: mod.rs
(+33 files in other folders)
