[package]
name = "alacahoyuk"
version = "1.0.0-beta.2"
edition = "2024"
exclude = ["/database"]

[features]
default = []
hardcoded-semerkant-url = []

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
axum = { version = "0.8.1", features = ["macros", "ws"] }
obfstr = "0.4"
bitflags = "2.10.0"
chrono = { version = "0.4.39", features = ["serde"] }
dashmap = "6"
diesel = { version = "2.3.5", features = [
    "sqlite",
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
dotenv = "0.15.0"
futures = "0.3.31"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher"] }
reqwest = { version = "0.12", features = ["json"] }
livekit-api = { version = "0.4", default-features = false, features = [
    "access-token",
    "webhooks",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "limit"] }
governor = { version = "0.10.4", features = ["dashmap"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.14.0", features = ["v4", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
p384 = { version = "0.13", features = ["ecdsa", "pem"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
tokio-tungstenite = "0.26"
futures-util = "0.3"
